--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
     "@nivo/core": "^0.69.0",
-    "@nivo/line": "^0.69.0",
+    "@nivo/geo": "^0.69.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
     "d3": "^6.7.0",
-    "nivo": "^0.31.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
